# faststream-template

./: .gitignore  Dockerfile  README.md  index.html  pyproject.toml
.github/workflows/: build_docker.yml  deploy_docs.yml  test.yml
app/: application.py
scripts/: build_docker.sh  lint.sh  serve_asyncapi_docs.sh  static-analysis.sh
tests/: test_application.py
